fix popup dialog buttons & style for dark mode

--- a/css/style.scss
+++ b/css/style.scss
@@ -502,11 +502,9 @@ h3.popup {
 .draw {
   color: rgb(107, 107, 107);
 }
-
-
 .hover-darken:hover {
-  background-color: rgba(0, 0, 0, 0.15);
+  background-color: var(--hover-darken-color, rgba(0, 0, 0, 0.15));
 }
 .hover-brighten:hover {
-  background-color: rgba(1, 1, 1, 0.15);
+  background-color: var(--hover-brighten-color, rgba(255, 255, 255, 0.15));
 }
